<resources>
    <string name="app_name">AarhusFitness</string>
    <string name="title_activity_fitness_place">FitnessPlaceActivity</string>
    <string name="action_map">See map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="account">Your Account</string>

    <!-- Strings related to sign in -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="not_signed_up">Not signed up yet? Sign up now!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sign up -->
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_confirm_password">Confirm password</string>

    <!-- Google O-Auth client id -->
    <!--<string name="default_web_client_id">762107523730-03mcsfsvv5r935teb3sla9adell6bn7g.apps.googleusercontent.com</string>-->
</resources>
